<resources>
    <string name="app_name">递爱</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <string name="neckname">SweetDeliven</string>
    <string name="textview">this is a large of balabala </string>
    <string name="lost">失物</string>
    <string name="find">招领</string>
    <string name="upload">上传</string>
    <string name="editInfo">编辑信息</string>

    <string name="shortcut_long_label_1">丢失</string>
    <string name="shortcut_long_label_2">捡到</string>
    <string name="shortcut_long_label_3">学生卡丢失</string>
    <string name="shortcut_short_label_1">1</string>
    <string name="shortcut_short_label_2">2</string>
    <string name="shortcut_short_label_3">3</string>
    <string name="shortcut_disabled_message">static shortcut disable message</string>

    <string name="toolbar_scroll_behavior" translatable="false">
         com.yf107.teamwork.lostandfound.view.Widget.ToolBarScrollBehavior</string>
    <string name="title_activity_revise_phone_number">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
